src/test/deca/context/invalid/test_class/var_already_exist_in_method.deca
// Description:
//    Program declaring a field already existing as a method in a parent class
//
// Results:
//    error
//
// History:
//    Created on 13/01/2025

class B{
        void x(){
        print(12);
        }
}

class A extends B{
        float x;
}
